--- a/index.html
+++ b/index.html
@@ -23,18 +23,14 @@
       </button>
     </form>
     <article class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="..." />
-      <div class="card-body">
+      <!-- <img src="..." class="card-img-top" alt="..." /> -->
+      <div class="card-body weatherOneDiv">
         <h5 id="currentDay" class="card-title">Weather for current day here</h5>
         <p class="card-text">
           City's Information Here
         </p>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Monday's Weather</li>
-        <li class="list-group-item">Tuesday's Weather</li>
-        <li class="list-group-item">Wednesday's Weather</li>
-      </ul>
+      <div class="fiveDayList"></div>
       <div class="card-body">
         <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a>
