--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Search
           </button>
         </form>
-
+        <div class="col-md-1"></div>
         <article class="card col-md-8" style="width: 18rem;">
           <!-- <img src="..." class="card-img-top" alt="..." /> -->
           <div class="card-body weatherOneDiv">
