--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
           </button>
         </form>
         <div class="col-md-1"></div>
-        <article class="card col-md-8" style="width: 18rem;">
+        <article
+          class="card col-md-8"
+          style="width: 18rem;"
+          class="mx-auto"
+          style="width: 200px;"
+        >
           <!-- <img src="..." class="card-img-top" alt="..." /> -->
           <div class="card-body weatherOneDiv">
             <h5 id="currentDay" class="card-title">
