--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
       <div class="row">
         <div class="col-md-1"></div>
 
-        <form class="form-inline my-2 my-lg-0 col-md-2">
+        <form class="form-inline col-md-2">
           <textarea name="search" id="searchCity"></textarea>
           <button class="btn btn-dark" type="submit">
             Search
           </button>
         </form>
+        <!-- Search Results Here -->
+        <div id="buttons-view"></div>
         <article
           class="card col-md-6"
           style="width: 18rem;"
@@ -35,7 +37,7 @@
           style="width: 200px;"
         >
           <!-- <img src="..." class="card-img-top" alt="..." /> -->
-          <div class="card-body weatherOneDiv">
+          <div class="card-body m-auto weatherOneDiv">
             <h1 id="currentDay" class="card-title">
               <bold
                 >Type a city name in the search bar to get the current weather
@@ -46,7 +48,7 @@
               City's Information Here
             </p> -->
           </div>
-          <div class="fiveDayList"></div>
+          <div class="fiveDayList m-auto"></div>
           <!-- <div class="card-body">
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
