added extra city buttons

--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@
           <button class="btn btn-dark" type="submit">
             Search
           </button>
+
+          <!-- Search Results Here -->
+          <div class="btn-group-vertical">
+            <button type="button" id="kc" class="btn btn-secondary">
+              Kansas City
+            </button>
+            <button type="button" id="den" class="btn btn-secondary">
+              Denver
+            </button>
+            <button type="button" id="sd" class="btn btn-secondary">
+              San Diego
+            </button>
+          </div>
         </form>
-        <!-- Search Results Here -->
-        <div id="buttons-view"></div>
         <article
           class="card col-md-6"
           style="width: 18rem;"
