added more to readme

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         >
           <!-- <img src="..." class="card-img-top" alt="..." /> -->
           <div class="card-body m-auto weatherOneDiv">
-            <h1 id="currentDay" class="card-title">
-              <bold
+            <h2 id="currentDay" class="card-title">
+              <strong
                 >Type a city name in the search bar to get the current weather
-                and forecast!</bold
+                and forecast!</strong
               >
-            </h1>
+            </h2>
             <!-- <p class="card-text">
               City's Information Here
             </p> -->
