adding more styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               City's Information Here
             </p> -->
           </div>
-          <div class="fiveDayList m-auto"></div>
+          <div class="fiveDayList m-auto" id="fiveHead"></div>
           <!-- <div class="card-body">
             <a href="#" class="card-link">Card link</a>
             <a href="#" class="card-link">Another link</a>
