added local storage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <form class="form-inline col-md-2">
           <textarea name="search" id="searchCity"></textarea>
-          <button class="btn btn-dark firstSearch" type="submit">
+          <button class="btn btn-dark firstSearch">
             Search
           </button>
 
