got lines to stop moving in html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-1"></div>
-
-        <form class="form-inline col-md-2">
+        <!--possibly add new class, may be an inheritance issue. change to inline block-->
+        <form class="col-md-2">
           <textarea name="search" id="searchCity"></textarea>
           <button class="btn btn-dark firstSearch">
             Search
