got buttons to add properly

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <!-- Search Results Here -->
           <div class="btn-group-vertical history">
             <button type="button" id="kc" class="btn btn-secondary">
-              Kansas City
+              KANSAS CITY
             </button>
             <button type="button" id="den" class="btn btn-secondary">
-              Denver
+              DENVER
             </button>
             <button type="button" id="sd" class="btn btn-secondary">
-              San Diego
+              SAN DIEGO
             </button>
           </div>
         </form>
