had to make last min adjustments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast!</title>
-
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -38,17 +37,16 @@
           <button class="btn btn-dark firstSearch">
             Search
           </button> -->
-
           <!-- Search Results Here -->
           <div class="btn-group-vertical history">
             <button type="button" id="kc" class="btn btn-secondary">
-              KANSAS CITY
+              KANSAS CITY - CURRENT
             </button>
             <button type="button" id="den" class="btn btn-secondary">
-              DENVER
+              DENVER - CURRENT
             </button>
             <button type="button" id="sd" class="btn btn-secondary">
-              SAN DIEGO
+              SAN DIEGO - CURRENT
             </button>
           </div>
         </form>
